# data-template

./: README.md  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  index.rst  make.bat
