[tool.poetry]
name = "data-template"
version = "0.1.0"
description = ""
authors = ["Lucas Latyki <lucaslatyki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
Sphinx = "^4.3.1"
coverage = "^6.2"
awscli = "^1.22.14"
flake8 = "^4.0.1"
python-dotenv = "^0.19.2"
scikit-learn = "^1.0.1"
pandas = "^1.3.4"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
